Fix long menu when hidden by footer bar

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@
 				top: 0;
 				left: -80%;
 				width: 80%;
-				height: 100%;
+				height: calc(100vh - 69px);
 				transition: left 0.2s;
 				overflow-y: scroll;
 				-webkit-overflow-scrolling: touch;
